--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -60,6 +60,7 @@
 .cart-item{
     padding: 1rem 2rem;
     border-radius: 20px;
+    margin: 2rem 0;
     background-color: rgb(247, 247, 247);
     @include flex(row, flex-start, center, 3rem);
     > img{
