--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -41,6 +41,7 @@
             @include flex(row, flex-start, flex-start);
             flex-wrap: wrap;
             height: calc(100% - 10rem);
+            margin-top: 2rem;
             overflow-y: auto;
         }
 
