--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -19,6 +19,13 @@ a {
     color: black;
 }
 
+button{
+  &:disabled{
+    cursor: not-allowed !important;
+    opacity: 0.5;
+  }
+}
+
 $color1: white;
 $color2: rgb(46, 46, 46);
 $color3: rgb(0, 104, 136);
@@ -39,6 +46,7 @@ $color3: rgb(0, 104, 136);
 @import "shipping";
 @import "login";
 @import "search";
+@import "productDetails";
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
 @import "admin-styles/chart";
@@ -111,7 +119,7 @@ $color3: rgb(0, 104, 136);
   
 .admin-container {
     @include grid(1fr 4fr, 2rem);
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgb(247, 247, 247);
     > aside {
       width: 100%;
