--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -305,17 +305,17 @@ $color3: rgb(0, 104, 136);
   font-size: 3rem;
 }
 
-.checkout-container{
+.stripe-container, .cashfree-container{
   max-width: 400px;
   width: 100%;
   margin: auto;
   > form {
     @include flex(column, flex-start, stretch, 2rem);
-    > button {
-      @include btn(1rem, $color3, $color1);
-      width: 100%;
-      font-size: 1.1rem;
-    }
+  }
+  button {
+    @include btn(1rem, $color3, $color1);
+    width: 100%;
+    font-size: 1.1rem;
   }
 }
   
