--- a/src/styles/admin-styles/_dashboard.scss
+++ b/src/styles/admin-styles/_dashboard.scss
@@ -88,8 +88,8 @@
 
     .dashboard-categories {
       width: 100%;
-      max-width: 16rem;
-      @include flex(column, center, unset, 0);
+      max-width: 20rem;
+      @include flex(column, flex-start, unset, 0);
       padding-bottom: 2rem;
       > h2 {
         @include heading;
@@ -99,7 +99,8 @@
 
       > div {
         overflow-y: auto;
-        height: 40rem;
+        min-height: 10rem;
+        max-height: 100%;
         padding-left: 0.5rem;
         &::-webkit-scrollbar {
           display: none;
