--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -157,6 +157,8 @@
       article {
         display: flex;
         justify-content: center;
+        align-items: center;
+        gap: 1rem;
         margin-top: 2rem;
   
         > button {
