--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -106,6 +106,10 @@ $color3: rgb(0, 104, 136);
         }
     }
 
+    .logo{
+      cursor: pointer;
+    }
+
     .header-right{
         display: flex;
         align-items: center;
