--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -218,6 +218,16 @@
     }
   }
 
+  .order-not-allowed{
+    background-color: rgb(250, 68, 68);
+    color: white;
+    width: 100%;
+    margin-left: -5%;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+  }
+
   .home-footer{
     margin-top: 3rem;
     display: flex;
