add daily dashboard and order date and time

--- a/src/styles/admin-styles/_dashboard.scss
+++ b/src/styles/admin-styles/_dashboard.scss
@@ -22,6 +22,7 @@
 
   .widget-container {
     @include flex(row, space-between, stretch, 2rem);
+    flex-wrap: wrap;
     padding: 2rem 2rem 2rem 0;
 
     .widget {
