--- a/src/styles/admin-styles/_products.scss
+++ b/src/styles/admin-styles/_products.scss
@@ -186,6 +186,13 @@
         opacity: 0.8;
       }
     }
+    .shipping-date-and-time{
+      @include flex(row, space-between, center);
+      padding: 0.5rem 2rem;
+      font-size: 1.1rem;
+      background-color: rgb(213, 213, 213);
+      border-radius: 20px;
+    }
   }
 }
 
